About -> Awards fix Z-index.

--- a/wp-content/themes/sayenko-erickson/assets/scss/template/_about.scss
+++ b/wp-content/themes/sayenko-erickson/assets/scss/template/_about.scss
@@ -235,6 +235,8 @@
     .section-awards {
         
         padding: rem-calc(125 0 75 0);
+        position: relative;
+        z-index: 3;
         
         background-color: #fff;
         
